# openxflow

./: .env.example  .gitignore  .secrets.baseline  CUSTOMIZATION.md  DESKTOP.md  DEVELOPMENT.md  README.md  README_EN.md  dev.cmd  dev.ps1  dev.sh
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/channel-i18n-chunks/: chunk-000.txt  chunk-001.txt  chunk-002.txt  chunk-003.txt  chunk-004.txt  chunk-005.txt  chunk-006.txt  chunk-007.txt  chunk-008.txt  chunk-009.txt  chunk-010.txt  chunk-011.txt  chunk-012.txt  chunk-013.txt  chunk-014.txt  chunk-015.txt  chunk-016.txt  chunk-017.txt  chunk-018.txt  chunk-019.txt  chunk-020.txt  chunk-021.txt  chunk-022.txt  chunk-023.txt  chunk-024.txt  chunk-025.txt  chunk-026.txt
.github/workflows/: apply-theme-menu-rules.yml  channel-gateway-apply-autofix.yml  channel-gateway-ci-diagnostics.yml  channel-gateway-ci-log-diagnostics.yml  channel-gateway-ci-repair.yml  channel-gateway-command-finalize.yml  channel-gateway-core.yml  channel-gateway-final-formatter.yml  channel-gateway-focused-diagnostics.yml  channel-gateway-format-fix.yml  channel-gateway-format.yml  channel-gateway-frontend.yml  channel-gateway-i18n-apply.yml  channel-gateway-i18n-finalize.yml  channel-gateway-i18n-parse-fix.yml  channel-gateway-legacy-marker.yml  channel-gateway-quality-commit-v2.yml  channel-gateway-quality-commit-v3.yml  channel-gateway-quality-commit.yml  channel-gateway-quality-fix.yml  channel-gateway-semantic-fix.yml  ci-scripts-test.yml  ci.yml  codeql.yml  conventional-labels.yml  cross-platform-test.yml  db-migration-validation.yml  deploy-docs-draft.yml  deploy-storybook.yml  deploy_gh-pages.yml  desktop-check.yml  desktop-release.yml  dev-scripts.yml  docker-build-v2.yml  docker-build.yml  docker-nightly-build.yml  docker_test.yml  docs_test.yml  extension-migration-checks.yml  fix-claude-svg-props.yml  (+31 more)
desktop/: README.md  biome.json  electron-builder.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
desktop/resources/loading/: error.html  index.html
desktop/scripts/: build-runtime.mjs  bundle-preload.mjs  clean.mjs  copy-assets.mjs  dev.mjs  prepare-frontend.mjs  run-electron-builder.mjs  setup-dev.mjs  verify-build.mjs  verify-runtime.mjs
desktop/src/main/: backend-manager.ts  errors.ts  index.ts  ipc.ts  logger.ts  path-manager.ts  port-manager.ts  runtime-resolver.ts  security.ts
desktop/src/preload/: index.ts
desktop/src/shared/: contracts.ts
desktop/tests/: logger.test.ts  path-manager.test.ts  port-manager.test.ts  runtime-resolver.test.ts  security.test.ts
docs/: channel-gateway-routing.md  channel-gateway.md  channel-token-cache.md
scripts/: apply_theme_menu_rules.py  check_deprecated_imports.py
src/backend/base/: pyproject.toml
src/backend/base/langflow/alembic/versions/: a8e1c6d4f5b7_add_channel_outbound_delivery.py  b9f2d7e6c4a1_add_channel_routing_and_discovery.py  c0a3e8f7d5b2_add_channel_commands_and_execution_logs.py  c4a9e2d7f1b0_add_channel_gateway_schema.py  d1e4f9a8b6c3_ensure_channel_conversation_status_index.py  d5b8f3a1c2e4_add_channel_file_asset_tracking.py  e6c9a4b2d3f5_widen_channel_file_identifier.py  f7d0b5c3e4a6_add_channel_webhook_jobs.py  g8e1c6d4f5b7_add_channel_outbound_delivery.py
src/backend/base/langflow/api/: router.py
src/backend/base/langflow/api/v1/: __init__.py  channel_admin.py  channel_bindings.py  channel_management.py  channel_resources.py  channel_runtime.py  channel_webhooks.py  channels.py
src/backend/base/langflow/channels/: __init__.py  ruff.toml
src/backend/base/langflow/channels/adapters/: __init__.py  base.py  dingtalk.py  dingtalk_resilient.py  factory.py  feishu.py  feishu_encrypted.py  feishu_resilient.py  mock.py  telegram.py  wecom.py  wecom_resilient.py
src/backend/base/langflow/channels/domain/: __init__.py  exceptions.py  models.py
src/backend/base/langflow/channels/security/: __init__.py  credentials.py  feishu_crypto.py  webhook_headers.py  wecom_crypto.py
src/backend/base/langflow/channels/services/: __init__.py  binding.py  capabilities.py  commands.py  conversation_validation.py  deduplication.py  dingtalk_stream.py  dispatch.py  execution_logs.py  files.py  gateway.py  keyed_loop_lock.py  loop_lock.py  metrics.py  outbound_delivery.py  outbound_delivery_maintenance.py  outbound_delivery_metrics.py  retry.py  runtime_config.py  timing_metrics.py  token_cache.py  token_cache_metrics.py  token_refresh.py  webhook_job_metrics.py  webhook_jobs.py  webhook_processing.py  workflow.py
src/backend/base/langflow/initial_setup/starter_projects/: Basic Prompt Chaining.json  Blog Writer.json  Custom Component Generator.json  Document Q&A.json  Image Sentiment Analysis.json  Instagram Copywriter.json  Invoice Summarizer.json  Market Research.json  Meeting Summary.json  Memory Chatbot.json  News Aggregator.json  Nvidia Remix.json  Pokédex Agent.json  Portfolio Website Code Generator.json  Price Deal Finder.json  Research Agent.json  Research Translation Loop.json  SEO Keyword Generator.json  SaaS Pricing.json  Search agent.json  Sequential Tasks Agents.json  Simple Agent.json  Social Media Agent.json  Text Sentiment Analysis.json  Travel Planning Agents.json  Twitter Thread Generator.json  Vector Store RAG.json  Youtube Analysis.json
src/backend/base/langflow/locales/: en.json
src/backend/base/langflow/services/database/models/: __init__.py
src/backend/base/langflow/services/database/models/channel/: __init__.py  binding_model.py  command_model.py  crud.py  execution_model.py  file_model.py  model.py  outbound_delivery_model.py  ruff.toml  webhook_job_model.py
src/frontend/: index.html  tsconfig.channels.json  vite.config.mts
src/frontend/public/: manifest.json
src/frontend/src/: App.tsx  i18n.ts  index.tsx  routes.tsx
src/frontend/src/constants/: constants.ts  dbProviderConstants.ts  (+1 more)
(+211 files in other folders)
